:construction: fixed overflow

--- a/desktop/style/stylesheet.css
+++ b/desktop/style/stylesheet.css
@@ -27,7 +27,7 @@
   color: white;
   font-family: Lucida;
   font-weight:bold;
-  overflow: scroll;
+  overflow: auto;
 }
 
 .terminal {
